Add sample functions

--- a/implement.ipynb
+++ b/implement.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "source": [
     "import os\r\n",
     "project = input('input project name ')\r\n",
@@ -29,7 +29,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "project created : test\n"
+      "project with the same name already exists : test\n"
      ]
     }
    ],
@@ -44,20 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "source": [
-    "# from implements.fetcher import fetch_sd\r\n",
+    "from implements.fetcher import fetch_sd\r\n",
     "\r\n",
-    "# number = int(input('enter a number of data')) \r\n",
-    "# print(dir(fetcher))\r\n",
-    "# # fetcher.fetch_sd(project, number)"
+    "number = int(input('enter a number of data')) \r\n",
+    "fetch_sd(project, number)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__']\n"
+      "test fetch! 6 times\n"
      ]
     }
    ],
@@ -73,13 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
-    "# from implements.fetcher import fetch_csv\r\n",
-    "#\r\n",
-    "# fetch_csv(project)"
+    "from implements.fetcher import fetch_csv\r\n",
+    "\r\n",
+    "fetch_csv(project)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "csv fetch!\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -91,15 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
-    "# from implements.encoder import encode_latent_space\r\n",
-    "# from implements.encoder import encode_fingerprints\r\n",
-    "#\r\n",
-    "# encode_latent_space(project)\r\n",
-    "# encode_fingerprints(project)"
+    "from implements.encoder import encode_latent_space\r\n",
+    "from implements.encoder import encode_fingerprints\r\n",
+    "\r\n",
+    "encode_latent_space(project)\r\n",
+    "encode_fingerprints(project)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "encode latent space : test\n",
+      "encode fingerprints : test\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -112,15 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
-    "# from implements.fetcher import fetch_latent_space\r\n",
-    "# from implements.fetcher import fetch_fingerprints\r\n",
-    "#\r\n",
-    "# fetch_latent_space(project)\r\n",
-    "# fetch_latent_fingerprints(project)"
+    "from implements.fetcher import fetch_latent_space\r\n",
+    "from implements.fetcher import fetch_fingerprints\r\n",
+    "\r\n",
+    "fetch_latent_space(project)\r\n",
+    "fetch_fingerprints(project)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "fetch latent space : test\n",
+      "fetch latent fingerprint : test\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -132,10 +157,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "source": [
-    "# from tensorflow.python.client import device_lib\r\n",
-    "# print(device_lib.list_local_devices())"
+    "from tensorflow.python.client import device_lib\r\n",
+    "print(device_lib.list_local_devices())"
    ],
    "outputs": [
     {
@@ -147,7 +172,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 5433811192048871964\n",
+      "incarnation: 1346756235562224653\n",
       "]\n"
      ]
     }
@@ -163,13 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "source": [
-    "# from implements.encoder import learn_tsne_pca\r\n",
-    "#\r\n",
-    "# learn_tsne_pca(project)"
+    "from implements.encoder import learn_tsne_pca\r\n",
+    "\r\n",
+    "learn_tsne_pca(project)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "learn tsne and pca : test\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -181,13 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
-    "# from implements.plotter import plot_molecules\r\n",
-    "#\r\n",
-    "# plot_molecules(project)"
+    "from implements.plotter import plot_molecules\r\n",
+    "\r\n",
+    "plot_molecules(project)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "plotting molecules : test\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -199,14 +240,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
-    "# from implements.plotter import cluster, plot, display, export\r\n",
-    "#\r\n",
-    "# sel = input('select graph to be clustered')\r\n",
-    "# clustered = cluster(project, sel) # cluster, plot, display"
+    "from implements.plotter import cluster\r\n",
+    "\r\n",
+    "sel = input('select graph to be clustered')\r\n",
+    "clustered = cluster(project, sel) # cluster, plot, display"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "cluster! plot! display!\n",
+      "project test complete\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -218,14 +268,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
-    "# from implements.plotter import export_molecules\r\n",
-    "#\r\n",
-    "# sel = list(map(int, input('enter label numbers to export').split(' ')))\r\n",
-    "# export_molecules(project, clustered, sel)"
+    "from implements.plotter import export_molecules\r\n",
+    "\r\n",
+    "sel = list(map(int, input('enter label numbers to export').split(' ')))\r\n",
+    "export_molecules(project, clustered, sel)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "export test\n",
+      "clustered : 4 5 3\n",
+      "sel : [4, 5, 6]\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
