Add implement functions except for clustering

--- a/aryl_ether_plotting_smiles.ipynb
+++ b/aryl_ether_plotting_smiles.ipynb
@@ -81,7 +81,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Fetch SMIELS data"
+    "## Fetch SMILES data"
    ],
    "metadata": {}
   },
@@ -653,8 +653,6 @@
     "\r\n",
     "x10 = [ point[0] for point in points_MACCSKeys_fp_tsne ]\r\n",
     "y10 = [ point[1] for point in points_MACCSKeys_fp_tsne ]\r\n",
-    "\r\n",
-    "print(len(x1), len(x3), len(x5))\r\n",
     "\r\n",
     "alpha = 0.5\r\n",
     "size = 5\r\n",
