--- a/implement.ipynb
+++ b/implement.ipynb
@@ -38,6 +38,28 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Needs\r\n",
+    "\r\n",
+    "#### we need preprocessed 'smiles.csv' file in the proejct, which is like:\r\n",
+    " ,smiles,value\r\n",
+    " 1,CC1=CC(=N,1\r\n",
+    " 2,CC1=CC(=NC(=N1),1\r\n",
+    " 3,CC(=O)NC1=CC=C,2\r\n",
+    " 4,COC1=CC2=C,2\r\n",
+    "#### i.e.\r\n",
+    "|   |     smiles      | value |\r\n",
+    "|---|-----------------|-------|\r\n",
+    "|1  |CC1=CC(=N|1      |   1   |\r\n",
+    "|2  |CC1=CC(=NC(=N1)  |   1   |\r\n",
+    "|3  |CC(=O)NC1=CC=C   |   2   |\r\n",
+    "|4  |COC1=CC2=C       |   2   |\r\n",
+    "|...|...              |  ...  |\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Encode molecules to latent space & fingerprints"
    ],
    "metadata": {}
@@ -89,7 +111,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##  tSNE & PCA"
+    "##  tSNE & PCA\r\n",
+    "#### takes a time!"
    ],
    "metadata": {}
   },
@@ -99,7 +122,7 @@
    "source": [
     "from implements.learner import learn_tsne_pca\r\n",
     "\r\n",
-    "learn_tsne_pca('test', gpu_available=False)"
+    "learn_tsne_pca('test')"
    ],
    "outputs": [
     {
