--- a/implement.ipynb
+++ b/implement.ipynb
@@ -41,11 +41,11 @@
     "## Needs\r\n",
     "\r\n",
     "#### we need preprocessed 'smiles.csv' file in the proejct, which is like:\r\n",
-    " ,smiles,value\r\n",
-    " 1,CC1=CC(=N,1\r\n",
-    " 2,CC1=CC(=NC(=N1),1\r\n",
-    " 3,CC(=O)NC1=CC=C,2\r\n",
-    " 4,COC1=CC2=C,2\r\n",
+    " ,smiles,value\r\n\n",
+    " 1,CC1=CC(=N,1\r\n\n",
+    " 2,CC1=CC(=NC(=N1),1\r\n\n",
+    " 3,CC(=O)NC1=CC=C,2\r\n\n",
+    " 4,COC1=CC2=C,2\r\n\n",
     "#### i.e.\r\n",
     "|   |     smiles      | value |\r\n",
     "|---|-----------------|-------|\r\n",
